[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/GameCode/LevelGoal.gd" type="Script" id=1]
[ext_resource path="res://Assets/3D/Textures/TEXTURE_GoalTop_04.png" type="Texture" id=2]
[ext_resource path="res://Assets/3D/Textures/TEXTURE_GoalBottom_04.png" type="Texture" id=3]
[ext_resource path="res://Assets/3D/Materials/MATERIAL_GoalActivated_01.tres" type="Material" id=4]
[ext_resource path="res://Assets/3D/Materials/MATERIAL_GoalNotActivated_01.tres" type="Material" id=5]
[ext_resource path="res://Assets/VFX/VFX_asset/Vfx_Orb_01.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/VFX/VFX_asset/VFX_GravityCubeActivate_01.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/3D/Meshes/MESH_GoalTopRight_01.obj" type="ArrayMesh" id=8]
[ext_resource path="res://Assets/3D/Meshes/MESH_GoalTopLeft_01.obj" type="ArrayMesh" id=9]
[ext_resource path="res://Assets/3D/Meshes/MESH_GoalCore_01.obj" type="ArrayMesh" id=10]
[ext_resource path="res://Assets/3D/Meshes/MESH_GoalTopMiddle_01.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Assets/Sounds/OtherSounds/SpecialItemAcquired.wav" type="AudioStream" id=12]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 20.226, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=13]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=14]
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=15]
albedo_texture = ExtResource( 2 )

[sub_resource type="Animation" id=17]
resource_name = "FinalGoalCutscene"
length = 20.0
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 8.5, 10.5, 11.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [ true ],
"method": "cutsceneControlAnimation"
}, {
"args": [ false ],
"method": "cutsceneControlAnimation"
}, {
"args": [ true ],
"method": "cutsceneControlAnimation"
}, {
"args": [  ],
"method": "startFinalVideo"
} ]
}

[sub_resource type="Animation" id=16]
resource_name = "floatingPieces"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GoalTopLeft:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5, 4.5 ),
"transitions": PoolRealArray( 0.554785, 1.41421 ),
"update": 0,
"values": [ Vector3( 0, 0.2, 4 ), Vector3( 0, -0.05, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GoalTopRight:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.6, 4.6 ),
"transitions": PoolRealArray( 1, 1.41421 ),
"update": 0,
"values": [ Vector3( 0, 0.22, 4 ), Vector3( 0, -0.15, 4 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GoalTopMiddle:translation")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 4.5 ),
"transitions": PoolRealArray( 0.554785, 1.41421 ),
"update": 0,
"values": [ Vector3( 0, 0.2, 4 ), Vector3( 0, -0.1, 4 ) ]
}

[node name="LevelGoal" type="Spatial"]
script = ExtResource( 1 )
activeStateMaterial = ExtResource( 4 )

[node name="Area" type="Area" parent="."]
collision_layer = 0
collision_mask = 524288

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )

[node name="GoalCore" type="MeshInstance" parent="."]
transform = Transform( -1.2, 0, -1.81195e-07, 0, 1.2, 0, 1.81195e-07, 0, -1.2, 0, 0, 4 )
generate_lightmap = false
mesh = ExtResource( 10 )
material/0 = SubResource( 6 )
material/1 = ExtResource( 5 )

[node name="GoalTopLeft" type="MeshInstance" parent="."]
transform = Transform( -1.2, 0, -1.81195e-07, 0, 1.2, 0, 1.81195e-07, 0, -1.2, 0, 0.0291772, 4 )
generate_lightmap = false
mesh = ExtResource( 9 )
material/0 = SubResource( 13 )
material/1 = ExtResource( 5 )

[node name="GoalTopRight" type="MeshInstance" parent="."]
transform = Transform( -1.2, 0, -1.81195e-07, 0, 1.2, 0, 1.81195e-07, 0, -1.2, 0, -0.0240762, 4 )
generate_lightmap = false
mesh = ExtResource( 8 )
material/0 = SubResource( 14 )
material/1 = ExtResource( 5 )

[node name="GoalTopMiddle" type="MeshInstance" parent="."]
transform = Transform( -1.2, 0, -1.81195e-07, 0, 1.2, 0, 1.81195e-07, 0, -1.2, 0, -0.00498733, 4 )
generate_lightmap = false
mesh = ExtResource( 11 )
material/0 = SubResource( 15 )

[node name="VFX_GravityCubeActivate" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 3.75, 3.75 )

[node name="Vfx_Orb_1" parent="." instance=ExtResource( 6 )]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, -2.49707e-08, 4.45, 4.03563 )
visible = false

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "floatingPieces"
anims/FinalGoalCutscene = SubResource( 17 )
anims/floatingPieces = SubResource( 16 )

[node name="GoalReachedSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 12 )
bus = "Sound"

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
